--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonschema": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "link-react": "^3.0.0",
+    "mapbox-gl": "^2.7.0",
     "nodemon": "^2.0.15",
     "query-string": "^7.1.0",
     "react": "^17.0.2",
