--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
   },
   "browserslist": {
     "production": [
-      ">0.25%",
+      ">0.2%",
+      "not ie 11",
       "not dead",
+      "not chrome 49",
       "not op_mini all"
     ],
     "development": [
